--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,35 @@
+{% include 'base.html' %}
+{#<head>#}
+{#    <title></title>#}
+{#</head>#}
+{#<body>#}
+{#lllll#}
+{#</body>#}
+{#</html>#}
+
 <!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-</head>
-<body>
-blllah
-</body>
+  <head>
+    <title>Bootstrap 101 Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+  <img height="150" width="180" img src ="https://scontent-b.xx.fbcdn.net/hphotos-frc3/198303_10151050240123792_448350071_n.jpg">
+    <h1></h1>
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
