add so that setting would load correctly

--- a/templates/about.html
+++ b/templates/about.html
@@ -23,8 +23,11 @@
     <![endif]-->
   </head>
   <body>
-  <img height="150" width="180" img src ="https://scontent-b.xx.fbcdn.net/hphotos-frc3/198303_10151050240123792_448350071_n.jpg">
-    <h1></h1>
+
+  <center><img height="150" width="180" img src ="https://scontent-b.xx.fbcdn.net/hphotos-frc3/198303_10151050240123792
+  _448350071_n.jpg"></center>
+
+  <h1></h1>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
