update About page

--- a/static/css/justified-nav.css
+++ b/static/css/justified-nav.css
@@ -9,7 +9,7 @@ body {
   padding-bottom: 40px;
 }
 
-/* Main marketing message and sign up button */
+ Main marketing message and sign up button
 .jumbotron {
   text-align: center;
   background-color: transparent;
