--- a/templates/about.html
+++ b/templates/about.html
@@ -1,38 +1,53 @@
 {% include 'base.html' %}
-{#<head>#}
-{#    <title></title>#}
-{#</head>#}
-{#<body>#}
-{#lllll#}
-{#</body>#}
-{#</html>#}
+{% load staticfiles %}
+
 
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Bootstrap 101 Template</title>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+    <title>Small Business Template with Logo for Bootstrap 3</title>
 
-  <center><img height="150" width="180" img src ="https://scontent-b.xx.fbcdn.net/hphotos-frc3/198303_10151050240123792
-  _448350071_n.jpg"></center>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
 
-  <h1></h1>
+    <!-- Add custom CSS here -->
+    <link href="{% static 'css/small-business.css' %}" rel="stylesheet">
+
+</head>
+
+<body>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+<div class="container">
+
+    <div class="row">
+        <div class="col-lg-8">
+            <img class="img-responsive img-rounded" src="http://placehold.it/900x350"><!-- take out img-rounded if you don't want the rounded corners on the image -->
+        </div>
+        <div class="col-lg-4">
+            <h1>Shayna Roseborough</h1>
+
+            <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it
+                makes a great use of the standard Bootstrap core components. Feel free to use this template for any
+                project you want!</p>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="well text-center">
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
+
+
