--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% include 'base.html' %}
+{% load staticfiles %}
 <title>Portfél</title>
 
 
@@ -49,6 +50,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
