--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -18,36 +18,58 @@
     <!-- Add custom CSS here -->
     <link href="{% static 'css/small-business.css' %}" rel="stylesheet">
 
-</head>
+  </head>
 
-<body>
+    <div class="container">
 
-
-<div class="container">
-
-    <div class="row">
-        <div class="col-lg-8">
-            <img class="img-responsive img-rounded" src="http://placehold.it/900x350"><!-- take out img-rounded if you don't want the rounded corners on the image -->
+      <center><div class="row">
+        <div class="col-lg-5">
+          <img class="img-responsive img-rounded" src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->
         </div>
         <div class="col-lg-4">
-            <h1>Shayna Roseborough</h1>
+          <h1>Shayna Roseborough</h1>
+          <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
 
-            <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it
-                makes a great use of the standard Bootstrap core components. Feel free to use this template for any
-                project you want!</p>
         </div>
-    </div>
+      </div>
+        </center>
 
-    <hr>
+      <hr>
 
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="well text-center">
-            </div>
+
+      <center><div class="row">
+        <div class="col-lg-4">
+          <h2>Past Experience</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin auctor quam ac tempor. Cras a ante sed libero mollis sodales. Praesent fringilla, neque ut ultrices faucibus, dolor eros ultrices neque, nec bibendum arcu ipsum eget justo.</p>
+
         </div>
-    </div>
-</div>
-</body>
+        <div class="col-lg-4">
+        </div>
+        <div class="col-lg-4">
+          <h2>Goals</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin auctor quam ac tempor. Cras a ante sed libero mollis sodales. Praesent fringilla, neque ut ultrices faucibus, dolor eros ultrices neque, nec bibendum arcu ipsum eget justo.</p>
+
+        </div>
+      </div>
+          </center>
+
+
+      <footer>
+        <hr>
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Copyright &copy; Company 2013 &middot; Facebook &middot; Twitter &middot; Google+</p>
+          </div>
+        </div>
+      </footer>
+
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Make sure to add jQuery - download the most recent version at http://jquery.com/ -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+  </body>
 </html>
-
 
