--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,10 +1,26 @@
 {% include 'base.html' %}
 
-<head>
-    <title></title>
-</head>
-<body>
-body
+<link class="cssdeck" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css">
 
-</body>
-</html>
+<form class="well span8">
+  <div class="row">
+		<div class="span3">
+			<label>First Name</label>
+			<input type="text" class="span3" placeholder="Your First Name">
+			<label>Last Name</label>
+			<input type="text" class="span3" placeholder="Your Last Name">
+			<label>Email Address</label>
+			<input type="text" class="span3" placeholder="Your email address">
+
+
+		</div>
+		<div class="span5">
+			<label>Message</label>
+			<textarea name="message" id="message" class="input-xlarge span5" rows="10"></textarea>
+		</div>
+
+		<button type="submit" class="btn btn-primary pull-right">Send</button>
+	</div>
+</form>
+
+
