added a contact me button

--- a/templates/about.html
+++ b/templates/about.html
@@ -28,7 +28,8 @@
         </div>
         <div class="col-lg-4">
           <h1>Shayna Roseborough</h1>
-          <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
+          <p>blah blah</p>
+            <p><a href ="/contact" class="btn btn-primary btn-lg" role="button">Contact me &raquo;</a></p>
 
         </div>
       </div>
