--- a/templates/about.html
+++ b/templates/about.html
@@ -24,11 +24,11 @@
 
       <center><div class="row">
         <div class="col-lg-5">
-          <img class="img-responsive img-rounded" src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->
+          <img class="img-responsive img-rounded" <img src= "https://scontent-a-dfw.xx.fbcdn.net/hphotos-frc1/197897_10150153638933792_3468009_n.jpg"src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->
         </div>
         <div class="col-lg-4">
           <h1>Shayna Roseborough</h1>
-          <p>blah blah</p>
+          <p>llll</p>
             <p><a href ="/contact" class="btn btn-primary btn-lg" role="button">Contact me &raquo;</a></p>
 
         </div>
@@ -41,14 +41,14 @@
       <center><div class="row">
         <div class="col-lg-4">
           <h2>Past Experience</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin auctor quam ac tempor. Cras a ante sed libero mollis sodales. Praesent fringilla, neque ut ultrices faucibus, dolor eros ultrices neque, nec bibendum arcu ipsum eget justo.</p>
+          <p>llll</p>
 
         </div>
         <div class="col-lg-4">
         </div>
         <div class="col-lg-4">
           <h2>Goals</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin auctor quam ac tempor. Cras a ante sed libero mollis sodales. Praesent fringilla, neque ut ultrices faucibus, dolor eros ultrices neque, nec bibendum arcu ipsum eget justo.</p>
+          <p>.</p>
 
         </div>
       </div>
