--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <div class="container">
 
       <div class="masthead">
-        <h3 class="text-muted">Project name</h3>
+{#        <h3 class="text-muted">project name</h3>#}
         <ul class="nav nav-justified">
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
