--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
     <title>Small Business Template with Logo for Bootstrap 3</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrapsettings.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
     <link href="{% static 'css/small-business.css' %}" rel="stylesheet">
