--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <title>Half-Page Full Width Slider Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrapsettings.css" rel="stylesheet">
 
 
 
@@ -86,8 +86,8 @@
     </div><!-- /.container -->
 
     <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+{#    <script src="js/jquery-1.10.2.js"></script>#}
+    <script src="js/bootstrap.min.js"></script>
 
 
   </body>
