--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,20 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Half-Page Full Width Slider Starter Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrapsettings.css" rel="stylesheet">
-
-
-
-  </head>
+{#  <head>#}
+{#    <meta charset="utf-8">#}
+{#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
+{#    <meta name="description" content="">#}
+{#    <meta name="author" content="">#}
+{##}
+{#    <title>Half-Page Full Width Slider Starter Template for Bootstrap</title>#}
+{##}
+{#    <!-- Bootstrap core CSS -->#}
+{#    <link href="css/bootstrapsettings.css" rel="stylesheet">#}
+{##}
+{##}
+{##}
+{#  </head>#}
 
   <body>
 
