--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 
     <!-- JavaScript -->
 {#    <script src="js/jquery-1.10.2.js"></script>#}
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
 
   </body>
