--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,9 @@
 
       <center><div class="row">
         <div class="col-lg-5">
-          <img class="img-responsive img-rounded" <img src= "https://scontent-a-dfw.xx.fbcdn.net/hphotos-frc1/197897_10150153638933792_3468009_n.jpg"src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->
+          <img class="img-responsive img-rounded" <img src= "https://scontent-a-dfw.xx.fbcdn.net/hphotos-frc1/197897_10150153638933792_3468009_n.jpg"
+            <img style="border:5px solid black">
+{#                >src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->#}
         </div>
         <div class="col-lg-4">
           <h1>Shayna Roseborough</h1>
