changed background color, font, and text.

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,6 +12,11 @@
 
     <title>Small Business Template with Logo for Bootstrap 3</title>
 
+      <html>
+<body background="http://aestudios.ca/flash_aeBackground.jpg">
+  </body>
+</html>
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrapsettings.css" rel="stylesheet">
 
@@ -24,13 +29,13 @@
 
       <center><div class="row">
         <div class="col-lg-5">
-          <img class="img-responsive img-rounded"> <img height="250" width="220" src= "https://scontent-a-dfw.xx.fbcdn.net/hphotos-frc1/197897_10150153638933792_3468009_n.jpg"
+          <img class="img-responsive img-rounded"> <img height="300" width="300" src= "https://scontent-a-dfw.xx.fbcdn.net/hphotos-frc1/197897_10150153638933792_3468009_n.jpg"
             style="border:5px solid black">
 {#                >src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->#}
         </div>
         <div class="col-lg-4">
-          <h1>Shayna Roseborough</h1>
-          <p>llll</p>
+          <h1><font face="courier"><font color="red">About me</font></font></h1>
+          <p><h3><font color="white">llll</font></h3></p>
             <p><a href ="/contact" class="btn btn-primary btn-lg" role="button">Contact me &raquo;</a></p>
 
         </div>
@@ -42,15 +47,15 @@
 
       <center><div class="row">
         <div class="col-lg-4">
-          <h2>Past Experience</h2>
-          <p>llll</p>
+          <h2><font face="courier"><font color="red">Past Experience</font></font></h2>
+          <p><font color="white">llll</font></p>
 
         </div>
         <div class="col-lg-4">
         </div>
         <div class="col-lg-4">
-          <h2>Goals</h2>
-          <p>.</p>
+          <h2><font face="courier"><font color="red">Goals</font></font></h2>
+          <p><font color="white">ppppp</font></p>
 
         </div>
       </div>
@@ -73,6 +78,5 @@
     <!-- Make sure to add jQuery - download the most recent version at http://jquery.com/ -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-  </body>
 </html>
 
