--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,9 @@
 {% include 'base.html' %}
+<html>
+<body background="http://aestudios.ca/flash_aeBackground.jpg">
+</body>
+</html>
+
 
 <link class="cssdeck" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css">
 
@@ -11,6 +16,7 @@
 			<input type="text" class="span3" placeholder="Your Last Name">
 			<label>Email Address</label>
 			<input type="text" class="span3" placeholder="Your email address">
+{#            <p><a href ="/about" class="btn btn-primary btn-lg" role="button">View My Blog! &raquo;</a></p>#}
 
 
 		</div>
@@ -20,7 +26,11 @@
 		</div>
 
 		<button type="submit" class="btn btn-primary pull-right">Send</button>
+
+
+
 	</div>
 </form>
+
 
 
