--- a/templates/index.html
+++ b/templates/index.html
@@ -3,77 +3,48 @@
 
 <!DOCTYPE html>
 <html lang="en">
-{#  <head>#}
-{#    <meta charset="utf-8">#}
-{#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
-{#    <meta name="description" content="">#}
-{#    <meta name="author" content="">#}
-{##}
-{#    <title>Half-Page Full Width Slider Starter Template for Bootstrap</title>#}
-{##}
-{#    <!-- Bootstrap core CSS -->#}
-{#    <link href="css/bootstrapsettings.css" rel="stylesheet">#}
-{##}
-{##}
-{##}
-{#  </head>#}
-
   <body>
-
-{#    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">#}
-{#      <div class="container">#}
-{#        <div class="navbar-header">#}
-{#          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">#}
-{#            <span class="sr-only">Toggle navigation</span>#}
-{#            <span class="icon-bar"></span>#}
-{#            <span class="icon-bar"></span>#}
-{#            <span class="icon-bar"></span>#}
-{#          </button>#}
-{#          <a class="navbar-brand" href="index.php">Start Bootstrap</a>#}
-{#        </div>#}
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-{#        <div class="collapse navbar-collapse navbar-ex1-collapse">#}
-{#          <ul class="nav navbar-nav">#}
-{#            <li><a href="#about">About</a></li>#}
-{#            <li><a href="#services">Services</a></li>#}
-{#            <li><a href="#contact">Contact</a></li>#}
-{#          </ul>#}
-{#        </div><!-- /.navbar-collapse -->#}
-{#      </div><!-- /.container -->#}
-{#    </nav>#}
+<html>
+<body background="http://aestudios.ca/flash_aeBackground.jpg">
+  </body>
+</html>
 
 
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+  <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Welcome!</h1>
-        <p><h3>cool statement</h3></p>
-        <p><a href ="/about" class="btn btn-primary btn-lg" role="button">About me &raquo;</a></p>
+        <center><h1><font face="courier"><font color="red">Welcome!</font></font></h1></center>
+        <p><center><h3><font color="black">I am Shayna Roseborough, I design.</font></h3></center></p>
+          <h3><center><font color="black">Take a closer look I think you'll like it.</font></center></h3>
+        <p><center><a href ="/about" class="btn btn-primary btn-lg"role="button">About me &raquo;</a></center></p>
+
+
+
+
+
       </div>
     </div>
 
     <div class="container">
       <!-- Example row of columns -->
 
-{##}
       <div class="row section">
         <div class="col-lg-12">
-          <h1>A Full Width Image Slider Template</h1>
-          <p>This is a great starting point for yet another modern and stylish website. Here are some things to consider when working with this template:</p>
-          <ul>
-                  <li>Unique Fonts</li>
-                  <li>Attractive Colors</li>
-                  <li>Content Spacing for Legibility and Design</li>
-                  <li>Decent Pictures that Still Load Quickly (less than 400KB for example)</li>
-                  <li>Make the Pictures INFORMATIVE</li>
-                  <li>Custom Styling for the Captions</li>
+
+{#          <h1>A Full Width Image Slider Template</h1>#}
+{#          <p>This is a great starting point for yet another modern and stylish website. Here are some things to consider when working with this template:</p>#}
+{#          <ul>#}
+{#                  <li>Unique Fonts</li>#}
+{#                  <li>Attractive Colors</li>#}
+{#                  <li>Content Spacing for Legibility and Design</li>#}
+{#                  <li>Decent Pictures that Still Load Quickly (less than 400KB for example)</li>#}
+{#                  <li>Make the Pictures INFORMATIVE</li>#}
+{#                  <li>Custom Styling for the Captions</li>#}
           </ul>
         </div>
       </div>
-
-      <hr>
+{##}
+{#      <hr>#}
 
       <footer>
         <div class="row">
@@ -99,60 +70,6 @@
 
 
 
-
-{#<title>Portfél</title>#}
-{##}
-{##}
-{#    <!-- Main jumbotron for a primary marketing message or call to action -->#}
-{#    <div class="jumbotron">#}
-{#      <div class="container">#}
-{#        <h1>Welcome!</h1>#}
-{#        <p><h3>cool statement</p></h3>#}
-{#        <p><a href ="/about" class="btn btn-primary btn-lg" role="button">About me &raquo;</a></p>#}
-{#      </div>#}
-{#    </div>#}
-{##}
-{#    <div class="container">#}
-{#      <!-- Example row of columns -->#}
-{#      <div class="row">#}
-{#        <div class="col-md-4">#}
-{#          <h2>Heading</h2>#}
-{#          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris#}
-{#              condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.#}
-{#              Donec sed odio dui. </p>#}
-{#          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>#}
-{#        </div>#}
-{#        <div class="col-md-4">#}
-{#          <h2>Heading</h2>#}
-{#          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,#}
-{#              tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada#}
-{#              magna mollis euismod. Donec sed odio dui. </p>#}
-{#          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>#}
-{#       </div>#}
-{#        <div class="col-md-4">#}
-{#          <h2>Heading</h2>#}
-{#          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula#}
-{#              porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,#}
-{#              ut fermentum massa justo sit amet risus.</p>#}
-{#          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>#}
-{#        </div>#}
-{#      </div>#}
-{##}
-{#      <hr>#}
-{##}
-{#      <footer>#}
-{#        <p>&copy; Company 2013</p>#}
-{#      </footer>#}
-{#    </div> <!-- /container -->#}
-{##}
-{##}
-{#    <!-- Bootstrap core JavaScript#}
-{#    ================================================== -->#}
-{#    <!-- Placed at the end of the document so the pages load faster -->#}
-{#    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>#}
-{#    <script src="{% static 'js/bootstrap.min.js' %}"></script>#}
-{#  </body>#}
-{#</html>#}
 
 
 
