updated my about page.

--- a/templates/about.html
+++ b/templates/about.html
@@ -30,12 +30,15 @@
       <center><div class="row">
         <div class="col-lg-5">
           <img class="img-responsive img-rounded"> <img height="300" width="300" src= "https://scontent-a-dfw.xx.fbcdn.net/hphotos-frc1/197897_10150153638933792_3468009_n.jpg"
-            style="border:5px solid black">
+            style="border:5px solid grey">
 {#                >src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->#}
         </div>
         <div class="col-lg-4">
           <h1><font face="courier"><font color="red">About me</font></font></h1>
-          <p><h3><font color="white">llll</font></h3></p>
+          <p><h4><font color="white">My name is Shayna roseborough, I am 21 years old and live in Tooele Utah,
+            I started coding in late 2013 at a 9 week web development course specializing in the python programming
+            language. I have worked on a wide range of projects that you can view in my portfolio.
+            In my free time I enjoy being outdoors and spending time with my family.</p></font></h4></p>
             <p><a href ="/contact" class="btn btn-primary btn-lg" role="button">Contact me &raquo;</a></p>
 
         </div>
@@ -48,14 +51,16 @@
       <center><div class="row">
         <div class="col-lg-4">
           <h2><font face="courier"><font color="red">Past Experience</font></font></h2>
-          <p><font color="white">llll</font></p>
+          <p><font color="white">I graduated high school in 2010 and went to school for cosmetology. For the past
+              3 years I have been self employed and managing my own business, at which i have utilized my skills
+              of communicating with others.</font></p>
 
         </div>
         <div class="col-lg-4">
         </div>
         <div class="col-lg-4">
           <h2><font face="courier"><font color="red">Goals</font></font></h2>
-          <p><font color="white">ppppp</font></p>
+          <p><font color="white"></font></p>
 
         </div>
       </div>
