Changed backgrounds and nav-bar and btn

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Portfél</title>
+    <title>Portfolio</title>
 
     <!-- Bootstrap core CSS -->
 
