--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,7 @@
 {% include 'base.html' %}
 <html>
-<body background="http://aestudios.ca/flash_aeBackground.jpg">
+<body background="http://cf.sketchfu.com/i/2917368.png">
+
 </body>
 </html>
 
