--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,14 @@
 {% include 'base.html' %}
 {% load staticfiles %}
 
-<!DOCTYPE html>
+
+
 <html lang="en">
   <body>
 <html>
-<body background="http://aestudios.ca/flash_aeBackground.jpg">
+{#<body background="http://aestudios.ca/flash_aeBackground.jpg">#}
+<body background="http://i4.photobucket.com/albums/y149/iheartjrock3/backgroundplain.png">
+
   </body>
 </html>
 
@@ -31,33 +34,14 @@
       <div class="row section">
         <div class="col-lg-12">
 
-{#          <h1>A Full Width Image Slider Template</h1>#}
-{#          <p>This is a great starting point for yet another modern and stylish website. Here are some things to consider when working with this template:</p>#}
-{#          <ul>#}
-{#                  <li>Unique Fonts</li>#}
-{#                  <li>Attractive Colors</li>#}
-{#                  <li>Content Spacing for Legibility and Design</li>#}
-{#                  <li>Decent Pictures that Still Load Quickly (less than 400KB for example)</li>#}
-{#                  <li>Make the Pictures INFORMATIVE</li>#}
-{#                  <li>Custom Styling for the Captions</li>#}
-          </ul>
-        </div>
-      </div>
-{##}
-{#      <hr>#}
 
-      <footer>
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Copyright &copy; Company 2013</p>
-          </div>
-        </div>
-      </footer>
+
+
 
     </div><!-- /.container -->
 
     <!-- JavaScript -->
-{#    <script src="js/jquery-1.10.2.js"></script>#}
+    <script src="js/jquery-1.10.2.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
 
 
