--- a/static/css/bootstrapsettings.css
+++ b/static/css/bootstrapsettings.css
@@ -1,12 +1,11 @@
-/*!
- * Bootstrap v3.0.2 by @fat and @mdo
- * Copyright 2013 Twitter, Inc.
- * Licensed under http://www.apache.org/licenses/LICENSE-2.0
- *
- * Designed and built with all the love in the world by @mdo and @fat.
- */
 
-/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+! Bootstrap v3.0.2 by @fat and @mdo
+  Copyright 2013 Twitter, Inc.
+  Licensed under http://www.apache.org/licenses/LICENSE-2.0
+  Designed and built with all the love in the world by @mdo and @fat.
+
+
+! normalize.css v2.1.3 | MIT License | git.io/normalize
 
 article,
 aside,
@@ -683,7 +682,7 @@ blockquote {
 }
 
 blockquote p {
-  font-size: 17.5px;
+  font-size: 17px;
   font-weight: 300;
   line-height: 1.25;
 }
@@ -754,7 +753,7 @@ code {
 
 pre {
   display: block;
-  padding: 9.5px;
+  padding: 9px;
   margin: 0 0 10px;
   font-size: 13px;
   line-height: 1.428571429;
@@ -1716,7 +1715,7 @@ table th[class*="col-"] {
   float: none;
 }
 
-.table > thead > tr > td.active,
+/*.table > thead > tr > td.active,*/
 .table > tbody > tr > td.active,
 .table > tfoot > tr > td.active,
 .table > thead > tr > th.active,
@@ -1731,7 +1730,7 @@ table th[class*="col-"] {
   background-color: #f5f5f5;
 }
 
-.table > thead > tr > td.success,
+*.table > thead > tr > td.success,*/
 .table > tbody > tr > td.success,
 .table > tfoot > tr > td.success,
 .table > thead > tr > th.success,
@@ -1746,7 +1745,7 @@ table th[class*="col-"] {
   background-color: #dff0d8;
 }
 
-.table-hover > tbody > tr > td.success:hover,
+/*.table-hover > tbody > tr > td.success:hover,*/
 .table-hover > tbody > tr > th.success:hover,
 .table-hover > tbody > tr.success:hover > td,
 .table-hover > tbody > tr.success:hover > th {
@@ -1879,7 +1878,7 @@ input[type="radio"],
 input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
-  /* IE8-9 */
+   IE8-9
 
   line-height: normal;
 }
@@ -1947,21 +1946,21 @@ output {
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
 
-.form-control:-moz-placeholder {
-  color: #999999;
-}
+/*.form-control:-moz-placeholder {*/
+  /*color: #999999;*/
+/*}*/
 
-.form-control::-moz-placeholder {
-  color: #999999;
-}
+/*.form-control::-moz-placeholder {*/
+  /*color: #999999;*/
+/*}*/
 
-.form-control:-ms-input-placeholder {
-  color: #999999;
-}
+/*.form-control:-ms-input-placeholder {*/
+  /*color: #999999;*/
+/*}*/
 
-.form-control::-webkit-input-placeholder {
-  color: #999999;
-}
+/*.form-control::-webkit-input-placeholder {*/
+  /*color: #999999;*/
+/*}*/
 
 .form-control[disabled],
 .form-control[readonly],
@@ -2298,7 +2297,7 @@ fieldset[disabled] .btn {
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
   color: #333333;
-  background-color: #ebebeb;
+  background-color:#ebebeb;
   border-color: #adadad;
 }
 
@@ -2329,8 +2328,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #ffffff;
+  border-color: #ff0000;
 }
 
 .btn-primary:hover,
@@ -2339,8 +2338,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+  background-color: #ff0000;
+  border-color: #ffffff;
 }
 
 .btn-primary:active,
@@ -4534,7 +4533,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-nav {
-  margin: 7.5px -15px;
+  margin: 7px -15px;
 }
 
 .navbar-nav > li > a {
@@ -4704,7 +4703,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #333333;
-  background-color: transparent;
+  background-color: #ac2925;
 }
 
 .navbar-default .navbar-nav > .active > a,
@@ -5231,7 +5230,8 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-color: #00C5CD;
+  eeeeee;
 }
 
 .jumbotron h1 {
