--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,9 @@
     <title>Small Business Template with Logo for Bootstrap 3</title>
 
       <html>
-<body background="http://aestudios.ca/flash_aeBackground.jpg">
+<body background="http://cf.sketchfu.com/i/2917368.png">
+
+
   </body>
 </html>
 
@@ -30,15 +32,15 @@
       <center><div class="row">
         <div class="col-lg-5">
           <img class="img-responsive img-rounded"> <img height="300" width="300" src= "https://scontent-a-dfw.xx.fbcdn.net/hphotos-frc1/197897_10150153638933792_3468009_n.jpg"
-            style="border:5px solid grey">
+            style="border:5px solid red">
 {#                >src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->#}
         </div>
         <div class="col-lg-4">
-          <h1><font face="courier"><font color="red">About me</font></font></h1>
-          <p><h4><font color="white">My name is Shayna roseborough, I am 21 years old and live in Tooele Utah,
+          <h1><font face="courier"><font color="black">About</font> <font color="red">Me</font></font></h1>
+          <p><h4><font color="black">My name is Shayna Roseborough, I am 21 years old and live in Tooele Utah,
             I started coding in late 2013 at a 9 week web development course specializing in the python programming
             language. I have worked on a wide range of projects that you can view in my portfolio.
-            In my free time I enjoy being outdoors and spending time with my family.</p></font></h4></p>
+            In my free time I enjoy being outdoors and spending time with my family.</font></h4></p>
             <p><a href ="/contact" class="btn btn-primary btn-lg" role="button">Contact me &raquo;</a></p>
 
         </div>
@@ -51,7 +53,7 @@
       <center><div class="row">
         <div class="col-lg-4">
           <h2><font face="courier"><font color="red">Past Experience</font></font></h2>
-          <p><font color="white">I graduated high school in 2010 and went to school for cosmetology. For the past
+          <p><font color="black">I graduated high school in 2010 and went to school for cosmetology. For the past
               3 years I have been self employed and managing my own business, at which i have utilized my skills
               of communicating with others.</font></p>
 
@@ -60,21 +62,12 @@
         </div>
         <div class="col-lg-4">
           <h2><font face="courier"><font color="red">Goals</font></font></h2>
-          <p><font color="white"></font></p>
+          <p><font color="black">blah blah</font></p>
 
         </div>
       </div>
           </center>
 
-
-      <footer>
-        <hr>
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Copyright &copy; Company 2013 &middot; Facebook &middot; Twitter &middot; Google+</p>
-          </div>
-        </div>
-      </footer>
 
     </div><!-- /.container -->
 
