--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
 {#                >src="http://placehold.it/350x250"><!-- take out img-rounded if you don't want the rounded corners on the image -->#}
         </div>
         <div class="col-lg-4">
-          <h1><font face="courier"><font color="black">About</font> <font color="red">Me</font></font></h1>
+          <h1><font face="courier"><font color="red">About Me</font></font></h1>
           <p><h4><font color="black">My name is Shayna Roseborough, I am 21 years old and live in Tooele Utah,
             I started coding in late 2013 at a 9 week web development course specializing in the python programming
             language. I have worked on a wide range of projects that you can view in my portfolio.
@@ -52,17 +52,17 @@
 
       <center><div class="row">
         <div class="col-lg-4">
-          <h2><font face="courier"><font color="red">Past Experience</font></font></h2>
-          <p><font color="black">I graduated high school in 2010 and went to school for cosmetology. For the past
+          <h1><font face="courier"><font color="red">Past Experience</font></font></h1>
+          <p><h4></h4><font color="black">I graduated high school in 2010 and went to school for cosmetology. For the past
               3 years I have been self employed and managing my own business, at which i have utilized my skills
-              of communicating with others.</font></p>
+              of communicating with others.</font></h4></p>
 
         </div>
         <div class="col-lg-4">
         </div>
         <div class="col-lg-4">
-          <h2><font face="courier"><font color="red">Goals</font></font></h2>
-          <p><font color="black">blah blah</font></p>
+          <h1><font face="courier"><font color="red">Goals</font></font></h1>
+          <p><h4></h4><font color="black">blah blah</font></h4></p>
 
         </div>
       </div>
