--- a/templates/base.html
+++ b/templates/base.html
@@ -3,51 +3,69 @@
 
 {% load staticfiles %}
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.css" %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static "css/business-casual.css" %}"/>
+        <title>Portfolio</title>
 
-    <title>Portfolio</title>
+        <!-- Bootstrap core CSS -->
+        <!-- Custom styles for this template -->
+        {% block bootstrapcss %}
+        {% endblock bootstrapcss %}
 
-    <!-- Bootstrap core CSS -->
+    </head>
 
-      <!-- <link href="../../dist/css/bootstrap.css" rel="stylesheet"> -->
-{#    <link href="{% static "/css/bootstrap.css" %}" rel="stylesheet">#}
-    <link href="/static/css/bootstrapsettings.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="/static/css/justified-nav.css" rel="stylesheet">
+    <body {% block bodypicture %}{% endblock bodypicture %}>
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
+        <div class="container">
+            {% block header %}
 
- <body>
+            <div class="brand">Welcome</div>
+            <div class="address-bar">My name is Shayna Roseborough</div>
 
-    <div class="container">
+            <nav class="navbar navbar-default" role="navigation">
+              <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="index.html">Business Casual</a>
+                </div>
 
-      <div class="masthead">
-{#        <h3 class="text-muted">project name</h3>#}
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                  <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/weblog">Blog</a></li>
+{#                    <li><a href ='/projects'>Projects</a></li>#}
+                  </ul>
 
-        <ul class="nav nav-justified">
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/projects">Projects</a></li>
+                </div><!-- /.navbar-collapse -->
+              </div><!-- /.container -->
 
-        </ul>
-      </div>
+            </nav>
+            {% endblock header %}
+
+            {% block content %} Base Content {% endblock content %}
         </div>
- </body>
-</html>
 
+        <!-- Bootstrap core JavaScript -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- Make sure to add jQuery - download the most recent version at http://jquery.com/ -->
+{#        <script src="{% static 'js/jquery.js' %}"></script>#}
+{#        <script src="{% static 'js/bootstrap.js' %}"></script>#}
+
+    </body>
+</html>
