--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,37 +1,91 @@
-{% include 'base.html' %}
-<html>
-<body background="http://cf.sketchfu.com/i/2917368.png">
+{% extends 'base.html' %}
+{% load staticfiles %}
 
-</body>
+
+{% block content %}
+    <div class="container">
+
+      <div class="row">
+        <div class="box">
+          <div class="col-lg-12">
+            <hr>
+            <h2 class="intro-text text-center">Contact <strong>Me</strong></h2>
+            <hr>
+          </div>
+                <form role="form">
+                  <div class="row">
+                    <div class="form-group col-lg-4">
+                      <label>Name</label>
+                      <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group col-lg-4">
+                      <label>Email Address</label>
+                      <input type="email" class="form-control">
+                    </div>
+                    <div class="form-group col-lg-4">
+                      <label for="input3">Phone Number</label>
+                      <input type="phone" class="form-control">
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="form-group col-lg-12">
+                      <label>Message</label>
+                      <textarea class="form-control" rows="6"></textarea>
+                    </div>
+                    <div class="form-group col-lg-12">
+                      <input type="hidden" name="save" value="contact">
+                      <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                </div>
+              </form>
+            <p>Phone: <strong>435.840.5009</strong></p>
+            <p>Email: <strong>shaynawr@gmail.com</strong></p>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+   </div>
+
+    <!-- JavaScript -->
+    <script src="js/jquery-1.10.2.js"></script>
+    <script src="js/bootstrap.js"></script>
+
+  </body>
 </html>
 
 
-<link class="cssdeck" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css">
-
-<form class="well span8">
-  <div class="row">
-		<div class="span3">
-			<label>First Name</label>
-			<input type="text" class="span3" placeholder="Your First Name">
-			<label>Last Name</label>
-			<input type="text" class="span3" placeholder="Your Last Name">
-			<label>Email Address</label>
-			<input type="text" class="span3" placeholder="Your email address">
-{#            <p><a href ="/about" class="btn btn-primary btn-lg" role="button">View My Blog! &raquo;</a></p>#}
-
-
-		</div>
-		<div class="span5">
-			<label>Message</label>
-			<textarea name="message" id="message" class="input-xlarge span5" rows="10"></textarea>
-		</div>
-
-		<button type="submit" class="btn btn-primary pull-right">Send</button>
 
 
 
-	</div>
-</form>
+
+
+
+
+{#    <form class="well span8">#}
+{#      <div class="row">#}
+{#            <div class="span3">#}
+{#                <label>First Name</label>#}
+{#                <input type="text" class="span3" placeholder="Your First Name">#}
+{#                <label>Last Name</label>#}
+{#                <input type="text" class="span3" placeholder="Your Last Name">#}
+{#                <label>Email Address</label>#}
+{#                <input type="text" class="span3" placeholder="Your email address">#}
+{##}
+{##}
+{##}
+{#            </div>#}
+{#            <div class="span5">#}
+{#                <label>Message</label>#}
+{#                <textarea name="message" id="message" class="input-xlarge span5" rows="10"></textarea>#}
+{#            </div>#}
+{##}
+{#            <button type="submit" class="btn btn-primary pull-right">Send</button>#}
+{##}
+{##}
+{##}
+{#        </div>#}
+{#    </form>#}
+
+{% endblock content %}
 
 
 
