--- a/templates/index.html
+++ b/templates/index.html
@@ -1,71 +1,45 @@
-{% include 'base.html' %}
+{% extends 'base.html' %}
 {% load staticfiles %}
+{#{% block bootstrapcss %}<link class="cssdeck" rel="stylesheet" href="static/css/home.css">{% endblock bootstrapcss %}#}
 
-
-
-<html lang="en">
-  <body>
-<html>
-{#<body background="http://aestudios.ca/flash_aeBackground.jpg">#}
-<body background="http://i4.photobucket.com/albums/y149/iheartjrock3/backgroundplain.png">
-
-  </body>
-</html>
-
-
-  <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <center><h1><font face="courier"><font color="red">Welcome!</font></font></h1></center>
-        <p><center><h3><font color="black">I am Shayna Roseborough, I design.</font></h3></center></p>
-          <h3><center><font color="black">Take a closer look I think you'll like it.</font></center></h3>
-        <p><center><a href ="/about" class="btn btn-primary btn-lg"role="button">About me &raquo;</a></center></p>
-
-
-
-
-
-      </div>
-    </div>
+{% block content %}
 
     <div class="container">
-      <!-- Example row of columns -->
 
-      <div class="row section">
-        <div class="col-lg-12">
+      <div class="row">
+        <div class="box">
+          <div class="col-lg-12 text-center">
+            <div id="carousel-example-generic" class="carousel slide">
+              <!-- Indicators -->
+              <ol class="carousel-indicators hidden-xs">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
 
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="item active">
+                  <img class="img-responsive img-full" src="img/slide-1.jpg" >
+                </div>
+                <div class="item">
+                  <img class="img-responsive img-full" src="img/slide-2.jpg" >
+                </div>
+                <div class="item">
+                  <img class="img-responsive img-full" src="img/slide-3.jpg" >
+                </div>
+              </div>
 
-
-
-
-    </div><!-- /.container -->
-
-    <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-
-
-  </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                <span class="icon-prev"></span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                <span class="icon-next"></span>
+              </a>
+            </div>
+              </div>
+            </div>
+          </div>
+    </div>
+{% endblock content %}
