--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <div class="container">
+
 
       <div class="row">
         <div class="box">
@@ -11,6 +11,9 @@
             <hr>
             <h2 class="intro-text text-center">About <strong>Me</strong></h2>
             <hr>
+          </div>
+            <div class="col-md-6">
+                <img class="img-responsive img-border-left" src="https://scontent-a-dfw.xx.fbcdn.net/hphotos-frc1/197897_10150153638933792_3468009_n.jpg">
           </div>
           <div class="col-md-6">
             <p>This is a great place to introduce your company or project and describe what you do.</p>
@@ -20,31 +23,6 @@
           <div class="clearfix"></div>
         </div>
       </div>
-
-      <div class="row">
-        <div class="box">
-          <div class="col-lg-12">
-            <hr>
-            <h2 class="intro-text text-center">My <strong>Projects</strong></h2>
-            <hr>
-          </div>
-          <div class="col-sm-4 text-center">
-              <img class="img-responsive" src="http://placehold.it/750x450">
-              <h3>John Smith <small>Job Title</small></h3>
-          </div>
-          <div class="col-sm-4 text-center">
-              <img class="img-responsive" src="http://placehold.it/750x450">
-              <h3>John Smith <small>Job Title</small></h3>
-          </div>
-          <div class="col-sm-4 text-center">
-              <img class="img-responsive" src="http://placehold.it/750x450">
-              <h3>John Smith <small>Job Title</small></h3>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-
-    </div><!-- /.container -->
 
 
     <!-- JavaScript -->
