--- a/templates/base.html
+++ b/templates/base.html
@@ -22,13 +22,14 @@
     </head>
 
     <body {% block bodypicture %}{% endblock bodypicture %}>
+    {% block header %}
+        <div class="head-transparent">
 
-
-        <div class="container">
-            {% block header %}
 
             <div class="brand">Welcome</div>
             <div class="address-bar">My name is Shayna Roseborough</div>
+        </div>
+
 
             <nav class="navbar navbar-default" role="navigation">
               <div class="container">
@@ -48,7 +49,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/about">About</a></li>
                     <li><a href="/contact">Contact</a></li>
-                    <li><a href="/weblog">Blog</a></li>
+{#                    <li><a href="/weblog">Blog</a></li>#}
 {#                    <li><a href ='/projects'>Projects</a></li>#}
                   </ul>
 
@@ -57,6 +58,10 @@
 
             </nav>
             {% endblock header %}
+
+
+        <div class="container">
+
 
             {% block content %} Base Content {% endblock content %}
         </div>
