--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,24 +12,25 @@
             <h2 class="intro-text text-center">Contact <strong>Me</strong></h2>
             <hr>
           </div>
+            <form action="/contact-send/" method="post">{% csrf_token %}
                 <form role="form">
                   <div class="row">
                     <div class="form-group col-lg-4">
                       <label>Name</label>
-                      <input type="text" class="form-control">
+                      <input type="text" name="name" class="form-control">
                     </div>
                     <div class="form-group col-lg-4">
                       <label>Email Address</label>
-                      <input type="email" class="form-control">
+                      <input type="email" name="email" class="form-control">
                     </div>
                     <div class="form-group col-lg-4">
                       <label for="input3">Phone Number</label>
-                      <input type="phone" class="form-control">
+                      <input type="phone" name="phone" class="form-control">
                     </div>
                     <div class="clearfix"></div>
                     <div class="form-group col-lg-12">
                       <label>Message</label>
-                      <textarea class="form-control" rows="6"></textarea>
+                      <textarea class="form-control" rows="6" name="message"></textarea>
                     </div>
                     <div class="form-group col-lg-12">
                       <input type="hidden" name="save" value="contact">
@@ -37,6 +38,7 @@
                     </div>
                 </div>
               </form>
+                </form>
             <p>Phone: <strong>435.840.5009</strong></p>
             <p>Email: <strong>shaynawr@gmail.com</strong></p>
           </div>
