--- a/templates/index.html
+++ b/templates/index.html
@@ -1,45 +1,44 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{#{% block bootstrapcss %}<link class="cssdeck" rel="stylesheet" href="static/css/home.css">{% endblock bootstrapcss %}#}
 
 {% block content %}
-
-    <div class="container">
-
-      <div class="row">
-        <div class="box">
-          <div class="col-lg-12 text-center">
-            <div id="carousel-example-generic" class="carousel slide">
-              <!-- Indicators -->
-              <ol class="carousel-indicators hidden-xs">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-              </ol>
-
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-                  <img class="img-responsive img-full" src="img/slide-1.jpg" >
-                </div>
-                <div class="item">
-                  <img class="img-responsive img-full" src="img/slide-2.jpg" >
-                </div>
-                <div class="item">
-                  <img class="img-responsive img-full" src="img/slide-3.jpg" >
-                </div>
-              </div>
-
-              <!-- Controls -->
-              <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                <span class="icon-prev"></span>
-              </a>
-              <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                <span class="icon-next"></span>
-              </a>
-            </div>
-              </div>
-            </div>
+<div class="row box">
+    <div>
+          <div class="col-lg-12">
+            <hr>
+            <h2 class="intro-text text-center">My<strong>Projects</strong></h2>
+            <hr>
           </div>
+
+            <div class="col-lg-12 row">
+                <div class="col-lg-7 col-md-7">
+                  <a href="#"><img class="img-responsive" src="http://placehold.it/700x300"></a>
+                </div>
+
+                <div class="col-lg-5 col-md-5">
+                  <h3>Project One</h3>
+                  <h4>Subheading</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+                  <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
+            </div>
+
+
+            <div class="col-lg-12 top-buffer row">
+              <div class="col-sm-4 text-center">
+                  <img class="img-responsive" src="http://upload.wikimedia.org/wikipedia/en/b/b7/Smiley_fill.gif">
+                  <h3><center>Flood Fill</center> <small>Job Title</small></h3>
+              </div>
+              <div class="col-sm-4 text-center">
+                  <img class="img-responsive" src="http://placehold.it/750x450">
+                  <h3>John Smith <small>Job Title</small></h3>
+              </div>
+              <div class="col-sm-4 text-center">
+                  <img class="img-responsive" src="http://placehold.it/750x450">
+                  <h3>John Smith <small>Job Title</small></h3>
+              </div>
+            </div>
     </div>
+</div>
+
 {% endblock content %}
