--- a/templates/zinnia/base.html
+++ b/templates/zinnia/base.html
@@ -1,5 +1,58 @@
 {% extends "zinnia/skeleton.html" %}
 {% load zinnia_tags i18n %}
+{#{% extends 'base.html' %}#}
+{#{% load staticfiles %}#}
+
+{#{% block content %}#}
+{#<div class="container">#}
+{##}
+{#      <div class="row">#}
+{#        <div class="box">#}
+{#          <div class="col-lg-12">#}
+{#            <hr>#}
+{#            <h2 class="intro-text text-center">Company <strong>blog</strong></h2>#}
+{#            <hr>#}
+{#          </div>#}
+{#          <div class="col-lg-12 text-center">#}
+{#            <img class="img-responsive img-border img-full" src="img/slide-1.jpg">#}
+{#            <h2>Post Title<br><small>October 13, 2013</small></h2>#}
+{#            <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>#}
+{#            <a href="#" class="btn btn-default btn-lg">Read More</a>#}
+{#            <hr>#}
+{#          </div>#}
+{#          <div class="col-lg-12 text-center">#}
+{#            <img class="img-responsive img-border img-full" src="img/slide-2.jpg">#}
+{#            <h2>Post Title<br><small>October 13, 2013</small></h2>#}
+{#            <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>#}
+{#            <a href="#" class="btn btn-default btn-lg">Read More</a>#}
+{#            <hr>#}
+{#          </div>#}
+{#          <div class="col-lg-12 text-center">#}
+{#            <img class="img-responsive img-border img-full" src="img/slide-3.jpg">#}
+{#            <h2>Post Title<br><small>October 13, 2013</small></h2>#}
+{#            <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>#}
+{#            <a href="#" class="btn btn-default btn-lg">Read More</a>#}
+{#            <hr>#}
+{#          </div>#}
+{#          <div class="col-lg-12 text-center">#}
+{#            <ul class="pager">#}
+{#              <li class="previous"><a href="#">&larr; Older</a></li>#}
+{#              <li class="next"><a href="#">Newer &rarr;</a></li>#}
+{#            </ul>#}
+{#          </div>#}
+{#        </div>#}
+{#      </div>#}
+{##}
+{#    </div><!-- /.container -->#}
+{##}
+{#    <!-- JavaScript -->#}
+{#    <script src="js/jquery-1.10.2.js"></script>#}
+{#    <script src="js/bootstrap.js"></script>#}
+{##}
+{#  </body>#}
+{#</html>#}
+{#{% endblock content %}#}
+
 
 
 
@@ -109,3 +162,21 @@
 </div>
 {% endif %}
 {% endblock sidebar %}
+
+
+{% block meta-keywords %}{% get_tags as entry_tags %}{{ entry_tags|join:", "}}{% endblock meta-keywords %}
+
+{% block meta %}
+    <meta name="generator" content="Zinnia {{ ZINNIA_VERSION }}" />
+{% endblock meta %}
+
+{% block link %}
+    <link rel="index" href="{% url 'zinnia_entry_archive_index' %}" />
+    <link rel="author" type="text/plain" href="{% url 'zinnia_humans' %}" />
+    <link rel="EditURI" type="application/rsd+xml" href="{% url 'zinnia_rsd' %}" />
+    <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="{% url 'zinnia_wlwmanifest' %}" />
+    <link rel="search" type="application/opensearchdescription+xml" title="Zinnia's Blog" href="{% url 'zinnia_opensearch' %}" />
+    <link rel="alternate" type="application/rss+xml" title="{% trans "RSS Feed of latest entries" %}" href="{% url 'zinnia_entry_latest_feed' %}" />
+    <link rel="alternate" type="application/rss+xml" title="{% trans "RSS Feed of latest discussions" %}" href="{% url 'zinnia_discussion_latest_feed' %}" />
+    {% get_archives_entries "zinnia/tags/archives_entries_link.html" %}
+{% endblock link %}
